# yaad

./: .gitignore  README.md  pyproject.toml
docs/: demo.webm  index.html
examples/: ladakh_trip_chat.txt  sample_chat.txt  wedding_planning_chat.txt
scripts/: dry_run_demo.py
tests/: test_db.py  test_eval.py  test_parser.py  test_router.py  test_sessionize.py
yaad/: __init__.py  analytics.py  cli.py  db.py  embed.py  engine.py  eval.py  llm.py  parser.py  retrieve.py  router.py  sessionize.py  surprise.py
