[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yaad"
version = "0.1.0"
description = "Chat with your WhatsApp memories - local-first RAG + analytics over chat exports"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "requests>=2.28",
    "rich>=13.0",
]

[project.optional-dependencies]
dense = [
    "sentence-transformers>=2.2",
    "numpy>=1.24",
]
dev = [
    "pytest>=7.0",
]

[project.scripts]
yaad = "yaad.cli:main"

[tool.setuptools]
packages = ["yaad"]
